fix: inputs aligned

--- a/docs/css/form.css
+++ b/docs/css/form.css
@@ -15,6 +15,19 @@
 #who, .title {
     flex-direction: column;
 }
+#who {
+    & .checkbox-wrapper-16 {
+        max-width: 19em;
+        width: 100%;
+        & label {
+            display: block;
+            width: 100%;
+            & span, & input {
+                width: 100%;
+            }
+        }
+    }
+}
 
 #formatWho {
     font-weight: 700;
